fix(home): The Impact of μLearn alignment correction

--- a/src/modules/Dashboard/modules/landing/pages/LandingPage.module.css
+++ b/src/modules/Dashboard/modules/landing/pages/LandingPage.module.css
@@ -518,7 +518,7 @@
 .impact {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   gap: 30px;
 }
 
@@ -529,7 +529,7 @@
   text-align: center;
   font-size: 1.2rem;
   color: #666;
-  /* margin-top: 10px; */
+  margin-top: 10px;
 }
 
 .impact h1 {
@@ -890,6 +890,10 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+  }
+
+  .impact h6 {
+    margin-top: 0px;
   }
 
   .impact h1 {
